<resources>
    <string name="app_name">LoginTask</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="job_title">Job Title</string>
    <string name="upload_photo">upload photo</string>
    <string name="facebook_app_id">143870913790164</string>
    <string name="fb_login_protocol_scheme">fb1338917962934985</string>
    <string name="name">Name</string>
    \


</resources>
