<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_rose_petals">

    <LinearLayout
        android:id="@+id/sregisterview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:civ_border_width="2dp"
            android:src="@drawable/com_facebook_profile_picture_blank_portrait"
            app:civ_border_color="@color/light_grey"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/upload_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:textColor="@color/light_grey"/>


    <TextView
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/light_grey"
        android:textSize="20sp"
        android:layout_marginLeft="6dp"/>

    <EditText
        android:id="@+id/u_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/light_grey"
            android:textSize="20sp"
            android:layout_marginLeft="6dp"/>

        <EditText
            android:id="@+id/u_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/u_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/light_grey"
            android:textSize="20sp"
            android:layout_marginLeft="6dp"/>

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textColor="@color/light_grey"
            android:textSize="20sp"
            android:layout_marginLeft="6dp"/>

        <EditText
            android:id="@+id/job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/u_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/email"
            android:textColor="@color/light_grey"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/u_passw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/light_grey"
            android:textSize="20sp"
            android:layout_marginLeft="6dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/u_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/light_grey"
            android:textSize="20sp"
            android:layout_marginLeft="6dp"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="6dp"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    </ScrollView>
</layout>