<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homePage">

    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.android.logintask.uimain.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/logIn"
        android:name="com.example.android.logintask.LogIn.LogIn"
        android:label="@string/sign_in"
        tools:layout="@layout/log_in_fragment" >
        <action
            android:id="@+id/action_logIn_to_signUp"
            app:destination="@id/signUp" />
        <action
            android:id="@+id/action_logIn_to_dataView"
            app:destination="@id/dataView" />
        <action
            android:id="@+id/action_logIn_to_homePage"
            app:destination="@id/homePage" />
        <action
            android:id="@+id/action_logIn_to_resetPassword"
            app:destination="@id/resetPassword" />
    </fragment>
    <fragment
        android:id="@+id/signUp"
        android:name="com.example.android.logintask.SignUp.SignUp"
        android:label="@string/sign_up"
        tools:layout="@layout/sign_up_fragment" />
    <fragment
        android:id="@+id/homePage"
        android:name="com.example.android.logintask.HomePage.HomePage"
        android:label="@string/app_name"
        tools:layout="@layout/home_page_fragment">
        <action
            android:id="@+id/action_homePage_to_logIn"
            app:destination="@id/logIn" />
        <action
            android:id="@+id/action_homePage_to_signUp"
            app:destination="@id/signUp" />
    </fragment>
    <fragment
        android:id="@+id/dataView"
        android:name="com.example.android.logintask.DataView.DataView"
        android:label="DataView" />
    <fragment
        android:id="@+id/resetPassword"
        android:name="com.example.android.logintask.ResetPassword.ResetPassword"
        android:label="ResetPassword" >
        <action
            android:id="@+id/action_resetPassword_to_logIn"
            app:destination="@id/logIn" />
    </fragment>
</navigation>